@@ -1,7 +1,7 @@
 
 
 This archive contains the distribution B-Hooks-EndOfScope,
-version 0.09_01:
+version 0.09_02:
 
   Execute code after a scope finished compilation
 
