@@ -1,16 +1,23 @@
 name    = B-Hooks-EndOfScope
-version = 0.09_01
+version = 0.09_02
 author  = Florian Ragwitz <rafl@debian.org>
+author  = Peter Rabbitson <ribasushi@cpan.org>
 license = Perl_5
 copyright_holder = Florian Ragwitz
 
 [Prereqs]
-Class::Load   = 0.13
+Module::Runtime = 0.012
+Module::Implementation = 0.05
 Sub::Exporter = 0.981
 
 [Prereqs / TestRequires ]
 ; provide done_testing()
 Test::More    = 0.88
+
+[Prereqs / ConfigureRequires ]
+; for proper can_xs
+; <xdg> ribasushi, I think you want EU::CB 0.26 minimum
+ExtUtils::CBuilder = 0.26
 
 [Metadata]
 dynamic_config = 1
@@ -21,8 +28,6 @@ dynamic_config = 1
 -bundle = @FLORA
 -remove = MakeMaker
 -remove = AutoPrereqs
-
-
 
 dist = B-Hooks-EndOfScope
 repository_at = github
